[package]
name = "SOEM-sys"
version = "0.1.2"
authors = ["Matwey V. Kornilov <matwey.kornilov@gmail.com>"]
license = "GPL-2.0-only"
description = "Rust FFI bindings for SOEM"
documentation = "http://docs.rs/SOEM-sys"
repository = "https://github.com/matwey/SOEM-sys"
readme = "README.md"

[badges]
travis-ci = { repository = "matwey/SOEM-sys", branch = "master" }

[build-dependencies]
cmake = "0.1"
bindgen = "0.42.2"
